2010-02-25
Plugins now use Drupalish API
	They must register with a register_<plugin_name>() function
	They must have an output_<plugin_name>($request) plugin for outputting their content
	They must have valitade_<request_var>($request) functions and validate every request variable they depend on
Site now uses PEAR::raiseError() extensively
	Used for debugging/log information, as well as reporting error to users

2010-02-24
Worked on template.php plugin that handles outputting template files
	This is useful if in the future we want to support PHP code in CSS files
Worked on generate_href() function for creating valid links
	This will eventaully validate every parameter
Added some parameters to the register_plugin() API
	Plugins can now specify if they will handle their own template and output
	Useful for file.php and template.php plugins

2010-02-23
Started making API changes
Plugins are now required to register themselves with the system
Modules will soon be required to register a description
Plugins now are required to validate input, and the returned value if not blank should be used as the default
Plugins are required to have a register_<plugin name> as well as output_<plugin_name>
Removed some unnessicary validation from common.php
Removed validation from database.php, plugins now handle own validation
Fixed validation for select and IDs in select.php
Modules must re-validate only the request variables they depend on, if they are completely optional, no validation is needed

2010-02-22
Finished install.php admin script
	Now it saved the settings file, or prints it out in pretty colors
Fixed sizing problems in Live template

2010-02-17
Made modules more compatible with loading by requiring modules to INIT the includes they need before they use them, instead of when the module is loaded
	This way a module's information can be loaded and read (later including descriptions) without worrying about the dependencies
Worked on install.php script